# income_divider

./: Cargo.toml
src/: main.rs
ui/: appwindow.slint
