[package]
name = "incomeapp"
version = "0.1.0"
authors = ["jenkinpan <jenkinpan0628@gmail.com>"]
edition = "2021"
build = "build.rs"
description = "A desktop app that divides up income"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0"

[build-dependencies]
slint-build = "1.0"

[package.metadata.bundle]
name = "Income Divider"
identifier = "io.github.jenkinpan.rust_practice_project_income_divider"